--- a/index.html
+++ b/index.html
@@ -1,1 +1,191 @@
-<h1>Hello World!<h1>
+<!DOCTYPE html>
+<html class="">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta rel="author" href="">
+    <meta rel="publisher" href="">
+
+    <title>CTE Capoeiragem</title>
+
+    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <link rel="stylesheet" href="css/all.css">
+  </head>
+  <body>
+    <nav onmouseleave="closeMenu()">
+      <ul class="" id="topNav">
+        <li id="logo" class="active"><a href="#">CTE Capoeiragem</a></li>
+        <li><a href="#about">Quem Somos</a></li>
+        <li><a href="#where">Onde Estamos</a></li>
+        <li><a href="#ong">ONG</a></li>
+        <li><a href="#graduation">Graduação</a></li>
+        <li class="icon">
+          <a href="javascript:void(0);" onclick="openMenu()">&#9776;</a>
+        </li>
+      </ul>
+    </nav>
+
+
+
+    <header>
+
+      <div class="intro-text">
+        <img src="img/logo.png" />
+        <h1>Centro de Treinamento e Estudos da Capoeiragem</h1>
+        <h2>Mestre Balão - Presidente Fundador</h2>
+      </div>
+    </header>
+
+    <section id="about">
+      <h3>QUEM SOMOS</h3>
+      <hr class="hand" />
+      <div class="about-container">
+
+        <div class="about-block">
+          <img class="img-circle" src="img/aulas.webp" alt="Generic placeholder image" width="140" height="140">
+          <h4>Aulas</h4>
+          <p> Aulas dinâmicas com profissionais de gabarito internacional.</p>
+        </div>
+
+        <div class="about-block">
+          <img class="img-circle" src="img/estudos.webp" alt="Generic placeholder image" width="140" height="140">
+          <h4>Estudos</h4>
+          <p> Busca constante pelo conhecimento da nossa cultura. Fomos integrantes do principal centro de estudos do mundo da capoeira, o Instituito Jair Moura.   </p>
+        </div>
+
+        <div class="about-block">
+          <img class="img-circle" src="img/musica.webp" alt="Generic placeholder image" width="140" height="140">
+          <h4>Música</h4>
+          <p>Ensinamos nossos alunos a cantarem e tocarem todos os instrumentos da capoeira.</p>
+        </div>
+
+        <div class="about-block">
+          <img class="img-circle" src="img/folclore.webp" alt="Generic placeholder image" width="140" height="140">
+          <h4>Folclore</h4>
+          <p>Trabalhamos com os alunos outras manifestações da cultura popular afro-brasileira.</p>
+        </div>
+
+
+      </div>
+    </section>
+
+    <section id="where">
+      <h3>ONDE ESTAMOS</h3>
+      <hr class="globe" />
+      <div class="where-container">
+
+        <a class="where-unit" href="">
+          <div class="caption">
+            <div class="caption-content">
+              <i class="fa fa-search-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-responsive" src="img/brasil.png" />
+        </a>
+
+        <a class="where-unit" href="">
+          <div class="caption">
+            <div class="caption-content">
+              <i class="fa fa-search-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-responsive" src="img/eua.jpg"/>
+        </a>
+
+        <a class="where-unit" href="">
+          <div class="caption">
+            <div class="caption-content">
+              <i class="fa fa-search-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-responsive" src="img/alemanha.png" />
+        </a>
+
+        <a class="where-unit" href="">
+          <div class="caption">
+            <div class="caption-content">
+              <i class="fa fa-search-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-responsive" src="img/belgica.png" />
+        </a>
+
+        <a class="where-unit" href="">
+          <div class="caption">
+            <div class="caption-content">
+              <i class="fa fa-search-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-responsive" src="img/australia.png"/>
+        </a>
+
+        <a class="where-unit" href="">
+          <div class="caption">
+            <div class="caption-content">
+              <i class="fa fa-search-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-responsive" src="img/suica.png"/>
+        </a>
+
+      </div>
+
+      <div class="social-links">
+        <a href="" class="icon-twitter"></a>
+        <a href="" class="icon-facebook"></a>
+        <a href="" class="icon-instagram"></a>
+      </div>
+    </section>
+
+
+
+    <section id="ong">
+      <h3>Projeto Social Capoeiragem Mirim</h3>
+      <hr class="ong" />
+      <p class="desc">O Instituto CTE Capoeiragem foi criado para auxiliar nas ações do grupo. O Projeto Social Capoeiragem Mirim é uma das principais
+    iniciativas do Instituto e tem como função a  educação de crianças e adolescentes utilizando a capoeira como sua principal ferramenta.</p>
+    </section>
+
+    <section id="graduation">
+        <h3>NOSSO SISTEMA DE  GRADUAÇÃO</h3>
+        <hr class="graduation" />
+        <p class="desc">O sistema de graduação do CTE Capoeiragem foi formado em homenagem as cores da bandeira do Brasil.</p>
+        <img class="img-responsive" src="img/graduacao.webp" />
+    </section>
+
+    <section id="contact">
+      <h3>Entre em contato</h3>
+      <hr class="contact" />
+      <form method="POST" actio="#">
+
+        <fieldset class="contact-info-group">
+
+          <label><span>Nome</span>
+          <input type="text" name="nome"></label>
+
+          <label><span>Email</span>
+          <input type="email" name="_replyto"></label>
+
+        </fieldset>
+
+      <label><span>Mensagem</span>
+      <textarea name="message"></textarea></label>
+
+      <fieldset class="submit-wrap">
+        <input type="submit" value="Enviar">
+      </fieldset>
+
+      </form>
+    </section>
+
+    <div id="map" style="width:100%;height:400px;background:black;"></div>
+
+    <footer>
+      <p class="copyright">2016 © CTE Capoeiragem - Desenvolvedor: Gabriel Miranda</p>
+    </footer>
+    <script src="js/functions.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?callback=mapLocation"></script>
+  </body>
+</html>
